<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3-nav-noetic</name>
  <version>0.1.0</version>
  <description>
    A ROS Noetic package for autonomous navigation of Turtlebot3 in Gazebo with obstacle avoidance
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>